Fix select border radius so it doesn't bite with the scrollbar

--- a/Theme/General.css
+++ b/Theme/General.css
@@ -25,7 +25,7 @@
   --huey-light-background-color: rgb(255,255,255);
   --huey-medium-background-color: rgb(250,250,250);
   --huey-dark-background-color: rgb(222,222,222);
-
+  
   /**
   * Huey border colors
   */
@@ -47,6 +47,10 @@
   --huey-icon-color-subtle: rgb(200,200,200);
   --huey-icon-color: rgb(50,50,50);
   --huey-icon-color-highlight: rgb(0,0,0);
+}
+
+* {
+  scrollbar-color: var( --huey-medium-background-color );
 }
 
 /**
@@ -74,6 +78,13 @@ input, select, button {
   border-style: solid;
   border-width: 1px;
   border-radius: 14px;
+  height: 26px;
+}
+
+select[multiple] {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 14px 0px 0px 14px;
   height: 26px;
 }
 
